# PondIQ

./: .gitignore  README.md  pondiq_api.py  pyproject.toml  requirements_api.txt  requirements_streamlit.txt  streamlit_app.py
PondIQ/data/: ready_for_feature_engineering.csv
PondIQ/data/processed/: station2_binary_labelled.csv
PondIQ/notebooks/: 01_data_cleaning_and_label_generation.ipynb  03_feature_engineering.ipynb
PondIQ/src/: merging_data.ipynb
data/engineered/: feature_engineered.csv
data/processed/: station2_labelled.csv
docs/literature/: CapstoneResearch_26-05-2026.docx
notebooks/: 01_data_cleaning_and_label_generation.ipynb  02_eda.ipynb  02_feature_engineering.ipynb
