[project]
name = "capstone"
version = "0.1.0"
description = "PondIQ"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "ipykernel>=7.2.0",
    "joblib>=1.4.0",
    "jupyter-client>=8.8.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.34.0",
    "xgboost>=2.1.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
